fix: footer on mobile

--- a/tff-blog/Shared/MainLayout.razor.css
+++ b/tff-blog/Shared/MainLayout.razor.css
@@ -49,7 +49,6 @@ footer {
     }
 
     footer {
-        max-height: 15vh;
         grid-area: 4 / 1 / 4 / 3;
     }
 }
